--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,33 +1,25 @@
-.App {
-  text-align: center;
+.territory {
+  fill: #a9a9a9;
 }
-
-.logo {
-  animation: logo-spin infinite 20s linear;
-  height: 40vmin;
+.territory:hover {
+  fill: #22aa44;
+}
+.compass {
+  fill: #fff;
+  stroke: #000;
+  stroke-width: 1;
+}
+.button {
+  fill: #225EA8;
+  stroke: #0C2C84;
+  stroke-width: 0.5;
+  stroke-miterlimit:6;
+  stroke-linecap: round;
+}
+.button:hover {
+  stroke-width: 1;
+}
+.plus-minus {
+  fill: #fff;
   pointer-events: none;
-}
-
-.header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.link {
-  color: #b318f0;
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
